# logits_study

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  USAGE.md  analyzer.py  analyzer_new.py  analyzer_old.py  answer_comparator.py  config.py  data_processor.py  logits_analysis_demo.ipynb  model_loader.py  pyproject.toml  run_analysis.py  run_analysis_new.py  run_analysis_old.py  setup.sh  test_environment.py  test_fixes.py  visualizer.py  visualizer_new.py  visualizer_old.py
data/: logits_study_data.jsonl  logits_study_data_sample20.jsonl  logits_study_data_sample4.jsonl
