[project]
name = "logits-study"
version = "0.1.0"
description = "LLM Logits Analysis for Qwen Models"
requires-python = ">=3.8.1"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly==6.0.1",
    "kaleido==0.2.1",
    "jieba>=0.42.1",
    "jsonlines>=3.0.0",
    "tqdm>=4.64.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "sympy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "data/*",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]
